modal overlap solved

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -348,7 +348,7 @@ padding-bottom: 20px;
 
 .homeHero{
     position:absolute;
-    z-index:9999999;
+    z-index:9;
     top:150px; /* change to whatever you want */
     left:25%; /* change to whatever you want */
     right:auto; /* change to whatever you want */
